# xv6-riscv

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
kernel/: kernel.ld
mkfs/: CMakeLists.txt  mkfs.c
